data/derived/fa15/progs/unify/prog2331.ml.out
Characters 169-173:
  if (1 = 2) then seen' := h :: seen ;
                                ^^^^
Error: This expression has type 'a list ref
       but an expression was expected of type 'a list
